--- a/.github/workflows/turborepo.yml
+++ b/.github/workflows/turborepo.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - uses: pnpm/action-setup@4
+      - uses: pnpm/action-setup@v4
         with:
           version: 8
       - name: Install Nodejs
