--- a/.github/workflows/cargo-llvm-cov.yml
+++ b/.github/workflows/cargo-llvm-cov.yml
@@ -39,7 +39,7 @@ jobs:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11  # Pin v4.1.1
         with:
           fetch-depth: 0
-          ref: 2bb6bc1be2120a661256ce285ceb60e5ccab9136
+          ref: d6323237f6bca17e07bee516f11bf47b00330b87
 
       - uses: bmwill/rust-cache@v1
 
@@ -60,20 +60,20 @@ jobs:
       - name: Run code coverage for nextest
         run: SUI_SKIP_SIMTESTS=1 cargo llvm-cov --ignore-run-fail --lcov --output-path lcov.info nextest
 
-      - name: Upload report to Codecov for nextest
-        uses: codecov/codecov-action@e0b68c6749509c5f83f984dd99a76a1c1a231044 # pin v4.0.1
-        with:
-          files: lcov.info
+      # - name: Upload report to Codecov for nextest
+      #   uses: codecov/codecov-action@e0b68c6749509c5f83f984dd99a76a1c1a231044 # pin v4.0.1
+      #   with:
+      #     files: lcov.info
 
-      - name: Run code coverage for simtest
-        run: |
-          git clean -fd
-          ./scripts/simtest/codecov.sh
+      # - name: Run code coverage for simtest
+      #   run: |
+      #     git clean -fd
+      #     ./scripts/simtest/codecov.sh
 
-      - name: Upload report to Codecov for simtest
-        uses: codecov/codecov-action@e0b68c6749509c5f83f984dd99a76a1c1a231044 # pin v4.0.1
-        with:
-          files: lcov-simtest.info
+      # - name: Upload report to Codecov for simtest
+      #   uses: codecov/codecov-action@e0b68c6749509c5f83f984dd99a76a1c1a231044 # pin v4.0.1
+      #   with:
+      #     files: lcov-simtest.info
 
   # notify:
   #   name: Notify
