--- a/.github/workflows/cargo-llvm-cov.yml
+++ b/.github/workflows/cargo-llvm-cov.yml
@@ -48,6 +48,9 @@ jobs:
       - name: Install nextest
         uses: taiki-e/install-action@nextest
 
+      - name: Install llvm-tools
+        run: rustup component add llvm-tools-preview
+
       - name: Set Swap Space
         uses: pierotofy/set-swap-space@master
         with:
