--- a/sdk/deepbook-v3/package.json
+++ b/sdk/deepbook-v3/package.json
@@ -36,8 +36,7 @@
 		"prepare:e2e": "cargo build --bin sui --profile dev && cross-env RUST_LOG=warn,sui=error,anemo_tower=warn,consensus=off cargo run --bin sui -- start --with-faucet --force-regenesis"
 	},
 	"dependencies": {
-		"@mysten/sui": "workspace:*",
-		"turbo": "^2.0.6"
+		"@mysten/sui": "workspace:*"
 	},
 	"devDependencies": {
 		"@mysten/build-scripts": "workspace:*",
