Draft of tracing

--- a/external-crates/move/crates/move-vm-runtime/Cargo.toml
+++ b/external-crates/move/crates/move-vm-runtime/Cargo.toml
@@ -26,6 +26,8 @@ move-vm-config.workspace = true
 move-vm-types.workspace = true
 move-binary-format.workspace = true
 move-vm-profiler.workspace = true
+# TODO(tzakian): Feature gate this
+move-trace-format.workspace = true
 
 [dev-dependencies]
 anyhow.workspace = true
