--- a/external-crates/move/crates/move-analyzer/prettier-move/package.json
+++ b/external-crates/move/crates/move-analyzer/prettier-move/package.json
@@ -16,13 +16,13 @@
   },
   "dependencies": {
     "prettier": "^3.3.2",
-    "web-tree-sitter": "0.20.8"
+    "web-tree-sitter": "^0.20.8"
   },
   "devDependencies": {
     "@types/diff": "^5.2.1",
-    "@types/node": "20.10.6",
+    "@types/node": "^20.10.6",
     "diff": "^5.2.0",
-    "typescript": "5.3.3",
+    "typescript": "^5.3.3",
     "vitest": "^1.6.0"
   }
 }
