--- a/sdk/deepbook-v3/package.json
+++ b/sdk/deepbook-v3/package.json
@@ -32,8 +32,8 @@
 		"eslint:fix": "pnpm run eslint:check --fix",
 		"lint": "pnpm run eslint:check && pnpm run prettier:check",
 		"lint:fix": "pnpm run eslint:fix && pnpm run prettier:fix",
-		"test:e2e": "wait-on http://127.0.0.1:9123 -l --timeout 120000 && vitest run e2e",
-		"prepare:e2e": "cargo build --bin sui --profile dev && cross-env RUST_LOG=warn,sui=error,anemo_tower=warn,consensus=off cargo run --bin sui -- start --with-faucet --force-regenesis"
+		"test:e2e": "wait-on http://127.0.0.1:9123 -l --timeout 120000 && vitest run",
+		"prepare:e2e": "pnpm run --filter @mysten/sui prepare:e2e"
 	},
 	"dependencies": {
 		"@mysten/sui": "workspace:*"
