[ts-sdk] Moved formatAmount and formatAmountParts from apps/core to sdk/typescript (#17791)
    ## Description

    Moved formatAmount and formatAmountParts utils from the apps/core
    package to the sdk/typescript.

    Set deprecation warnings for the older versions.

    Added the corresponding  automated tests.

    ## Test plan

    Run the automated tests for the @mysten/sui package.
    Make sure the transaction amount is displayed properly in the wallet.

--- a/sdk/typescript/package.json
+++ b/sdk/typescript/package.json
@@ -153,6 +153,7 @@
 		"@scure/bip39": "^1.2.1",
 		"@suchipi/femver": "^1.0.0",
 		"bech32": "^2.0.0",
+		"bignumber.js": "^9.1.1",
 		"gql.tada": "^1.7.0",
 		"graphql": "^16.8.1",
 		"tweetnacl": "^1.0.3",
