--- a/sdk/deepbook-v3/examples/tsconfig.json
+++ b/sdk/deepbook-v3/examples/tsconfig.json
@@ -7,6 +7,6 @@
 		"moduleResolution": "Node",
 		"emitDeclarationOnly": false,
 		"resolveJsonModule": true,
-		"module": "esnext",
+		"module": "esnext"
 	}
 }
