--- a/.github/workflows/external.yml
+++ b/.github/workflows/external.yml
@@ -118,7 +118,7 @@ jobs:
         uses: actions-rs/cargo@ae10961054e4aa8b4aa7dffede299aaf087aa33b # pin@v1.0.3
         with:
           command: fmt
-          args: --check --all
+          args: --check
 
   cargo-deny:
     name: cargo-deny (advisories, licenses, bans, ...)
