--- a/crates/sui-node/Cargo.toml
+++ b/crates/sui-node/Cargo.toml
@@ -7,6 +7,8 @@ publish = false
 edition = "2021"
 
 [dependencies]
+mimalloc.workspace = true
+
 anemo.workspace = true
 anemo-tower.workspace = true
 arc-swap.workspace = true
