--- a/sdk/deepbook-v3/package.json
+++ b/sdk/deepbook-v3/package.json
@@ -41,6 +41,7 @@
 	"devDependencies": {
 		"@mysten/build-scripts": "workspace:*",
 		"@types/node": "^20.14.10",
+		"@iarna/toml": "^3.0.0",
 		"tmp": "^0.2.3",
 		"ts-node": "^10.9.2",
 		"ts-retry-promise": "^0.8.1",
