--- a/sdk/deepbook-v3/package.json
+++ b/sdk/deepbook-v3/package.json
@@ -47,6 +47,7 @@
 		"typescript": "^5.5.3",
 		"vite": "^5.3.3",
 		"vitest": "^2.0.1",
-		"wait-on": "^7.2.0"
+		"wait-on": "^7.2.0",
+		"@iarna/toml": "^3.0.0"
 	}
 }
