--- a/sdk/deepbook-v3/test/data/deepbook/Move.toml
+++ b/sdk/deepbook-v3/test/data/deepbook/Move.toml
@@ -2,6 +2,7 @@
 name = "deepbook"
 edition = "2024.beta"
 version = "0.0.1"
+published-at = "0x0"
 
 [dependencies]
 Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "framework/mainnet" }
